added comments, updated add item button, updated new-list-name label

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="row">
                 <div class="col-sm">
                     <div class="form-group">
-                        <label for="new-list-name">New List Name</label>
+                        <label for="new-list-name">Create New Shopping List</label>
                         <input type="text" class="form-control" id="new-list-name">
                     </div>
                 </div>
